<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BisDriver</string>
    <string name="label_login_driverCode"> کد پرسنلی خود را وارد کنید </string>
    <string name="label_login_driverCode1"> کد پرسنلی </string>
    <string name="label_login_phoneNumber">شماره موبایل</string>
    <string name="label_login_activationCode">کد فعالسازی را وارد کنید</string>
    <string name="label_login_username">نام کاربری</string>
    <string name="label_login_password">گذرواژه</string>
    <string name="label_login_password_confirm">تعریف مجدد گذرواژه</string>
    <string name="label_login_createAccount1">حساب کاربری ندارید؟</string>
    <string name="label_login_forgetPassword1">گذرواژه خود را فراموش کرده اید؟</string>
    <string name="label_login_forgetPassword2">بازیابی نام کاربری</string>
    <string name="label_autoLogin_localPass">گذرواژه محلی خود را وارد کنید</string>
    <string name="label_login_button_ok">تایید </string>
    <string name="label_login_button_input">ورود </string>
    <string name="label_login_editText_warning">اطلاعات را کامل وارد کنید </string>
    <string name="label_comment_editText_warning">متن گزارش را وارد کنید </string>
    <string name="label_login_editText_ok">اطلاعات ثبت شد </string>
    <string name="label_login_clickOk_warning">اطلاعات وارد شده اشتباه می باشد </string>
    <string name="label_login_active_localPass">فعال کردن گذرواژه محلی </string>
    <string name="label_login_change_localPass">تغییر گذرواژه محلی</string>
    <string name="comment">لطفا تایپ کنید...</string>
    <string name="label_login_active_description">در صورت تمایل برای فعال کردن گذرواژه محلی خود لطفا بر روی این آیتم ضربه بزنید</string>
    <string name="ok_btn">تائید</string>
    <string name="cancel_btn">انصراف</string>
    <string name="today">امروز</string>
    <string name="date_placeholder">"%s، %d %s"</string>
    <string name="label_tabLayout_tab3">رخداد ها </string>
    <string name="label_tabLayout_tab2">نیمراه های طی شده </string>
    <string name="label_tabLayout_tab1">تخلفات </string>
    <string name="label_tabLayout_notification">اعلانات </string>
    <string name="label_tabLayout_news">اخبار </string>
    <string name="label_home_detail">مجموع کارکرد ماهانه </string>
    <string name="label_daily_detail">ارزیابی پارامترهای حقوق </string>
    <string name="label_home_detail_workingDayCount">تعداد روز کارکرد </string>
    <string name="label_home_detail_timeOffDay">تعداد روز مرخصی </string>
    <string name="label_home_detail_dutyWork">کل کارکرد </string>
    <string name="label_home_detail_overtimeWorkReal">کل اضافه کار </string>
    <string name="label_home_detail_doubleWork">دوبل </string>
    <string name="label_home_detail_absentDay">تعداد روز غیبت </string>
    <string name="label_home_detail_fractionWork">کسر کار </string>
    <string name="label_home_detail_overtimeWork">اضافه کار قابل پرداخت </string>
    <string name="label_home_detail_nightWork">شب کاری </string>
    <string name="label_daily_detail_dailyWorkTypeEn">وضعیت کارکرد : </string>
    <string name="label_daily_detail_etCardDataVOList_sumCountEt"> تعداد تراکنش : </string>
    <string name="label_daily_detail_startDate"> تاریخ شروع کار :  </string>
    <string name="label_daily_detail_startHour"> شروع :  </string>
    <string name="label_daily_detail_dutyWork"> کل کارکرد :  </string>
    <string name="label_daily_detail_fractionPerform">کسر کار عملکردی : </string>
    <string name="label_daily_detail_overtimeWorkReal">کل اضافه کار : </string>
    <string name="label_daily_detail_timeInLine"> کارکرد مفید در خط :  </string>
    <string name="label_daily_detail_halfPathNoGps"> تعداد نیمراه : </string>
    <string name="label_daily_detail_endDate">تاریخ پایان کار :  </string>
    <string name="label_daily_detail_endHour"> پایان :  </string>
    <string name="label_daily_detail_fractionWork">کسر کار : </string>
    <string name="label_daily_detail_nightWork"> شب کاری: </string>
    <string name="label_daily_companyProfit"> بهره بردار :  </string>
    <string name="label_daily_nameFamily">  نام و نام خانوادگی :  </string>
    <string name="label_daily_shift">شیفت :  </string>
    <string name="label_daily_carUsage"> کاربری :  </string>
    <string name="label_daily_tariff">وضعیت تعرفه :  </string>
    <string name="label_daily_definedTime"> برنامه کاری تعریف شده :  </string>
    <string name="label_daily_date">تاریخ :  </string>
    <string name="label_daily_driverJobTypeEn">نوع شغل :  </string>
    <string name="label_daily_car"> خودرو :  </string>
    <string name="label_jalaliCalendar_WorkingDay"> شاغل</string>
    <string name="label_jalaliCalendar_HolidayDay"> روز تعطیل</string>
    <string name="label_jalaliCalendar_TimeOFFEntitlement">مرخصی</string>
    <string name="label_jalaliCalendar_TimeOFFWithoutRights">مرخصی بدون حقوق  </string>
    <string name="label_jalaliCalendar_TimeOFFSick">مرخصی استعلاجی </string>
    <string name="label_jalaliCalendar_Absence">غیبت </string>
    <string name="label_jalaliCalendar_Duty">ماموریت </string>
    <string name="label_jalaliCalendar_enterPrim">ثبت اولیه </string>
    <string name="label_jalaliCalendar_absent">عدم مراجعه</string>
    <string name="label_shiftType_Morning">صبح </string>
    <string name="label_shiftType_Afternoon">عصر </string>
    <string name="label_shiftType_Night">شب </string>
    <string name="label_shiftType_Other">سایر </string>
    <string name="label_shiftType_General">کلی </string>
    <string name="label_shiftType_MidDay">میان روزی </string>
    <string name="label_DrivingLicTypeEn1">پایه یک </string>
    <string name="label_DrivingLicTypeEn2">پایه دو </string>
    <string name="label_DrivingLicTypeEn3">کارت شهری </string>
    <string name="label_DrivingLicTypeEn4">گواهی موقت </string>
    <string name="label_DrivingLicTypeEn5">موتورسیکلت </string>
    <string name="label_DrivingLicTypeEn6">پایه یک ویژه </string>
    <string name="label_DrivingLicTypeEn7">پایه سه </string>
    <string name="label_item_list_fragment1_name">نام </string>
    <string name="label_item_list_fragment1_date">تاریخ </string>
    <string name="label_item_list_fragment1_Hour">ساعت </string>
    <string name="label_item_list_fragment1_locate">محل </string>
    <string name="label_item_list_eventPositionEn0">توقفگاه </string>
    <string name="label_item_list_eventPositionEn1">مبدا خط </string>
    <string name="label_item_list_eventPositionEn2">مقصد خط </string>
    <string name="myFormatString">%s</string>
    <string name="manage_driver">بـر نـا مه مـد یر یت\nکـارکـرد رانندگـان دولـتـی</string>
    <string name="label_item_list_fragment2_car">خودرو </string>
    <string name="label_item_list_fragment2_pathType">نوع مسیر </string>
    <string name="label_item_list_fragment2_time">مدت </string>
    <string name="label_item_list_fragment2_startDate">ساعت شروع </string>
    <string name="label_item_list_fragment2_endDate">ساعت پایان </string>
    <string name="label_item_list_fragment2_linePathNo">تعداد نیمراه</string>
    <string name="pathType_0">مسیر رفت </string>
    <string name="pathType_1">مسیر برگشت </string>
    <string name="label_ProcessStatus_State1">منتظر ورود </string>
    <string name="label_ProcessStatus_State4">مرخصی </string>
    <string name="label_ProcessStatus_State5">شاغل </string>
    <string name="label_ProcessStatus_State6">عدم مراجعه </string>
    <string name="label_ProcessStatus_State7">فاقد برنامه </string>
    <string name="label_ProcessStatus_State8">پایان کار زود هنگام </string>
    <string name="label_ProcessStatus_State9">پایان کار </string>
    <string name="label_ProcessStatus_State11">عدم حضور- روز تعطیل </string>
    <string name="label_ProcessStatus_State12">عدم ثبت تعرفه </string>
    <string name="label_ProcessStatus_State50">غیبت </string>
    <string name="label_ProcessStatus_EmployeeDuty">ماموریت </string>
    <string name="message_toast_recyclerView_click">فاقد اطلاعات</string>
    <string name="message_toast_invalidDateTime">تاریخ دستگاه نامعتبر است</string>
    <string name="label_driverJobTypeEn_DetermineCarForDriver">راننده با خودرو مشخص </string>
    <string name="label_driverJobTypeEn_RotatoryDriverInLine">راننده گردشی درخط </string>
    <string name="label_driverJobTypeEn_DriverInParking">راننده مستقر در توقفگاه </string>
    <string name="label_driverJobTypeEn_RescuerSOS">راننده امداد </string>
    <string name="label_driverJobTypeEn_AssistantRescuerSOS">کمک راننده امداد </string>
    <string name="label_driverJobTypeEn_WorkOnContract">اشتغال براساس قرارداد </string>
    <string name="error_unknown">خطا در عملیات! لطفا دوباره تلاش کنید.</string>
    <string name="error_noConnection">لطفا اتصال خود را به اینترنت بررسی کنید</string>
    <string name="success_login">شما با موفقیت وارد شدید.</string>
    <string name="success_enter_verification_code">کد اعتبارسنجی برای شما ارسال شد.</string>
    <string name="success_comment_sent">درخواست شما با موفقیت ثبت شد</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="exit_confirm">جهت خروج بار دیگر کلید بازگشت را بفشارید.</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string-array name="label_spinner">
        <item>Day</item>
        <item>Week</item>
        <item>Year</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="label_miladi_p7">SUN</string>
    <string name="label_miladi_p6">MON</string>
    <string name="label_miladi_p5">TUE</string>
    <string name="label_miladi_p4">WED</string>
    <string name="label_miladi_p3">THU</string>
    <string name="label_miladi_p2">FRI</string>
    <string name="label_miladi_p1">SAT</string>
    <string name="label_persian_p6">پنجشنبه</string>
    <string name="label_persian_p5">چهارشنبه</string>
    <string name="label_persian_p4">سه شنبه</string>
    <string name="label_persian_p3">دوشنبه</string>
    <string name="label_persian_p2">یکشنبه</string>
    <string name="label_persian_p1">شنبه</string>
    <string name="label_persian_p7">جمعه</string>
    <string name="label_year">سال</string>
    <string name="event_title_edt_hint">عنوان</string>
    <string name="label_ok">تایید</string>
    <string name="label_cancel">لغو</string>
    <string name="dayOfWeek_Sat">شنبه</string>
    <string name="dayOfWeek_Sun">یکشنبه</string>
    <string name="dayOfWeek_Mon">دوشنبه</string>
    <string name="label_requestMorkhasi">درخواست مرخصی</string>
    <string name="label_sendReport">ارسال گزارش</string>
    <string name="event_showDateTime">افزودن یادآور</string>
    <string name="event_description_txt">توضیحات</string>
    <string name="action_month_fa">ماهانه</string>
    <string name="action_week_fa">هفتگی</string>
    <string name="action_today_fa">روزانه</string>
    <string name="select_startWeekDay">شروع هفته</string>
    <string name="select_type_report">لطفا یکی از موارد زیر را انتخاب کنید</string>
</resources>