<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >

    <group android:checkableBehavior="single">
        <item android:id="@+id/action_day_view"
            android:title="@string/label_persian_p1"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/action_three_day_view"
            android:title="@string/label_persian_p2"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"
            android:checked="true"/>
        <item android:id="@+id/action_week_view"
            android:title="@string/label_persian_p3"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
    </group>
</menu>