<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:id="@+id/linearLayout1">

    <TextView
        android:id="@+id/txt_endDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/label_item_list_fragment2_endDate" />

    <TextView
        android:id="@+id/txt_startDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/label_item_list_fragment2_startDate" />

    <TextView
        android:id="@+id/txt_pathType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/label_item_list_fragment2_pathType" />


</LinearLayout>