<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.TabFragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark">

            <ImageButton
                android:id="@+id/close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/close"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/txt_locate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_item_list_fragment2_endDate" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_item_list_fragment2_startDate" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_item_list_fragment2_pathType" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>

    </LinearLayout>
</FrameLayout>